@@ -2,13 +2,15 @@ Special thanks go to people who have volunteered their time, effort,
 and ideas to make this software available.
 
 	David Begley <david@avarice.nepean.uws.edu.au>
+	Peter Cherney <peterc@luddite.com.au>
+	Leif Hedstrom <leif@netscape.com>
 	Jeff Mandel <jeff.mandel@probes.com>
 	Doug Nazar <nazard@dragoninc.on.ca>
 	Rakesh Patel <rpatel@globix.com>
 	Mike Shelton <Mike.Shelton@FMR.COM>
 	Aris Theocharides <aris@padl.com>
 	Stein Vrale <stein@terminator.net>
-	Greg <greg@rage.net>
+	Greg Retowski <greg@rage.net>
 
 If I've forgotton anyone, please let me know.
 
